--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "bootswatch": "^4.4.1",
     "fuse.js": "^3.4.6",
     "jquery": "^3.4.1",
-    "katex": "^0.11.1"
+    "katex": "^0.11.1",
+    "normalize.css": "^8.0.1"
   },
   "scripts": {
     "load": "sh ./load.sh"
